<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="tproceed">Proceed</string>
    <string name="temail_id">Email ID</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="student_name">Student Name</string>
    <string name="tgender">Gender</string>
    <string name="birthdate">Birthdate</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="proceedt">Proceed</string>
    <string name="student_namet">Student Name</string>
    <string name="email_idt">Email ID</string>
    <string name="birthdatet">Birthdate</string>
    <string name="todot">TODO</string>
    <string name="gendert">Gender</string>
    <string name="todot1">TODO</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="todot2">TODO</string>
    <string name="todot3">TODO</string>
    <string name="todot4">TODO</string>
    <string name="todot5">TODO</string>
    <string name="todot6">TODO</string>
    <string name="todotm">TODO</string>
    <string name="todotm1">TODO</string>
    <string name="todotm2">TODO</string>
    <string name="todotm3">TODO</string>
    <string name="todotm5">TODO</string>
    <string name="todotm6">TODO</string>
    <string name="todotn7">TODO</string>
    <string name="todot8">TODO</string>
    <string name="todot9">TODO</string>
    <string name="todot10">TODO</string>
    <string name="app_name" />
    <string name="todotm4n">TODO</string>
    <string name="select_gender">Select Gender</string>
    <string name="tname">Name :</string>
    <string name="ttextviewname">TextViewName</string>
    <string name="ttextviewemail">TextViewEmail</string>
    <string name="textviewgebder">TextViewGebder</string>
    <string name="textviewbirth">TextViewBirth</string>
    <string name="email">Email :</string>
    <string name="dob">DoB :</string>
    <string name="gender_sex">Gender (Sex) :</string>
    <string name="textviewname">TextViewName</string>
    <string name="email_id">Email ID</string>
    <string name="ptextviewemail">TextViewEmail</string>
    <string name="bithdate">BithDate</string>
    <string name="textviewdate">TextViewDate</string>
    <string name="gender">Gender</string>
    <string name="textviewgender">TextViewGender</string>
    <string name="name">Name :</string>
    <string name="proceed">Proceed</string>
    <string name="textviewemail">textviewemail</string>
</resources>