<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityViewTablet">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="85dp"
        android:layout_height="26dp"
        android:layout_marginStart="97dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="229dp"
        android:layout_marginBottom="10dp"
        android:text="@string/name"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/textViewNameT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewNameT"
        android:layout_width="119dp"
        android:layout_height="26dp"
        android:layout_marginStart="97dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="195dp"
        android:layout_marginBottom="10dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="93dp"
        android:layout_height="27dp"
        android:layout_marginStart="97dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="221dp"
        android:layout_marginBottom="5dp"
        android:text="@string/email"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/textViewEmailT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNameT" />

    <TextView
        android:id="@+id/textViewEmailT"
        android:layout_width="128dp"
        android:layout_height="23dp"
        android:layout_marginStart="97dp"
        android:layout_marginEnd="186dp"
        android:layout_marginBottom="2dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="102dp"
        android:layout_height="26dp"
        android:layout_marginStart="97dp"
        android:layout_marginEnd="212dp"
        android:layout_marginBottom="4dp"
        android:text="@string/dob"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/textViewDateT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmailT" />

    <TextView
        android:id="@+id/textViewDateT"
        android:layout_width="113dp"
        android:layout_height="25dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="10dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="92dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="3dp"
        android:text="@string/gender_sex"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/textViewGenderT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.304"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDateT" />

    <TextView
        android:id="@+id/textViewGenderT"
        android:layout_width="102dp"
        android:layout_height="26dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="210dp"
        android:layout_marginBottom="485dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />
</androidx.constraintlayout.widget.ConstraintLayout>